--- a/Smart-Cart/styles.css
+++ b/Smart-Cart/styles.css
@@ -51,6 +51,7 @@ nav a:hover {
     background-color: #F5CAC3;
     float: left;
     border-radius: 50px;
+    border: none;
 }
 
 input[type=text] {
@@ -191,4 +192,232 @@ input ::placeholder{
     height: 60px;
     width: 60px;
     border-radius: 50%;
+}
+#bar{
+    height: 60px;
+    width: 60px;
+}
+.bottom{
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    padding-left: 200px;
+}
+
+@media screen and (max-width:550px) 
+{
+    body {
+        margin: 0;
+        background-color: #F28482;
+        font-family: Montserrat;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 550px;
+    }
+    nav {
+        overflow: hidden;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 70px;
+    }
+    
+    nav ul{
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        max-width: 230px;
+        position: relative;
+    }
+    
+    nav ul li{
+        list-style: none;
+        font-size: 0px;
+        font-weight: 4 00;
+        color: #F28482;
+        align-items: center;
+        position: relative;
+    }
+    nav a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 10px 13px;
+        text-decoration: none ;
+    }
+    
+    nav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+    
+    .search-container {
+        background-color: #F5CAC3;
+        float: left;
+        border-radius: 50px;
+        height: auto;
+        height: 40px;
+        width: 200px;
+    }
+    
+    input[type=text] {
+        padding: 6px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        margin-left: 10px;
+        font-size: 17px;
+        border: none;
+        background: transparent;
+        outline: none;
+    }
+    
+    input ::placeholder{
+        color: #ddd;
+    }
+    
+    .search-container button {
+        float: left;
+        padding: 10px 20px;
+        margin-top: 15px;
+        margin-right: 20px;
+        margin-bottom: 10px;
+        background: transparent;
+        font-size: 17px;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .account-options {
+        float: right;
+        align-items: center;
+    }
+    
+    .account-options a {
+        padding: 14px 20px;
+        background-color: #84A59D;
+        margin-right: 10px;
+        border-radius: 30px;
+        font-weight: 500;
+        align-items: center;
+    }
+    
+    .child{
+        margin: 0 auto;
+        height: 90vh;
+        width: 90%;
+        background-color: #F7EDE2;
+        border-radius: 15px;
+    }
+    
+    #hero{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100% - 20vh);
+    }
+    
+    #leftportion{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        height: 80%;
+    }
+    
+    #leftportion button{
+        padding: 16px 20px 16px 20px;
+        border: none;
+        border-radius: 50%;
+        background-color: #F6BD60;
+        font-family: Montserrat;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #F7EDE2;
+        width: 100px;
+        text-align: center;
+        font-size: small;
+        cursor: pointer;
+    }
+    
+    #title{
+        font-family: "Madimi One", sans-serif;
+        font-size: 35px;
+        font-weight: 600;
+        color: #F28482;
+        text-align: center;
+    }
+    
+    #text{
+        text-transform: uppercase;
+        font-family: "Anton", sans-serif;
+        font-size: 15px;
+        color: #F6BD60;
+        text-align: center;
+    }
+    
+    #choose-card{
+        background-color: #84a59d6b;
+        height: 50px;
+        width: 150px;
+        border-radius: 20px;
+        padding: 20px;
+    }
+    
+    #choose-card span{
+        color: #84A59D;
+        font-weight: 800;
+        text-align: center;
+    }
+    
+    #choose-card div{
+        display: flex;
+        flex-direction: row;
+        gap: 5px;
+        margin-top: 10px;
+    }
+    
+    #choose-card div svg{
+        padding: 10px;
+        background-color: #84a59d6e;
+        border-radius: 50%;
+    }
+    
+    #choose-card div span{
+        padding: 10px;
+        background-color: #F7EDE2;
+        border-radius: 30%;
+    }
+    
+    #rightportion figure{
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        float: right;
+    }
+    
+    #rightportion figure img{
+        height: 70%;
+        width: 70%;
+        border-radius:100%;
+    }
+    
+    #logo{
+        height: 25px;
+        width: 25px;
+        border-radius: 100%;
+    }
+    #bar{
+        height: 25px;
+        width: 25px;
+        padding-left: 20px;
+    }
+    .bottom{
+        height: 20px;
+        width: 20px;
+        display: inline-block;
+        padding-left: 60px;
+    }
+
 }
