--- a/Smart-Cart/styles.css
+++ b/Smart-Cart/styles.css
@@ -2,14 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
-body {
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body,
+html {
+    height: 100%;
+    width: 100%;
     background-color: #F28482;
-    font-family: Montserrat;
-    display: flex;
+    /* font-family: Montserrat; */
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    align-items: center; */
+    /* min-height: 100vh; */
 }
 
 nav {
@@ -19,20 +27,22 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 100px;
+    width: 100%;
 }
 
-nav ul{
+nav ul {
     display: flex;
     flex-direction: row;
     gap: 30px;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
     font-size: larger;
     font-weight: 600;
     color: #F28482;
 }
+
 nav a {
     float: left;
     display: block;
@@ -65,7 +75,7 @@ input[type=text] {
     outline: none;
 }
 
-input ::placeholder{
+input ::placeholder {
     color: #ddd;
 }
 
@@ -93,7 +103,7 @@ input ::placeholder{
     font-weight: 500;
 }
 
-.child{
+.child {
     margin: 0 auto;
     height: 90vh;
     width: 90%;
@@ -101,21 +111,21 @@ input ::placeholder{
     border-radius: 15px;
 }
 
-#hero{
+#hero {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100% - 20vh);
+    height: calc(100% - 10vh);
 }
 
-#leftportion{
+#leftportion {
     display: flex;
     flex-direction: column;
     gap: 20px;
     height: 80%;
 }
 
-#leftportion button{
+#leftportion button {
     padding: 20px 30px 20px 30px;
     border: none;
     border-radius: 40px;
@@ -130,21 +140,21 @@ input ::placeholder{
     cursor: pointer;
 }
 
-#title{
+#title {
     font-family: "Madimi One", sans-serif;
     font-size: 64px;
     font-weight: 800;
     color: #F28482;
 }
 
-#text{
+#text {
     text-transform: uppercase;
     font-family: "Anton", sans-serif;
     font-size: 24px;
     color: #F6BD60;
 }
 
-#choose-card{
+/* #choose-card {
     background-color: #84a59d6b;
     height: 70px;
     width: 200px;
@@ -152,60 +162,61 @@ input ::placeholder{
     padding: 20px;
 }
 
-#choose-card span{
+#choose-card span {
     color: #84A59D;
     font-weight: 800;
 }
 
-#choose-card div{
+#choose-card div {
     display: flex;
     flex-direction: row;
     gap: 5px;
     margin-top: 10px;
 }
 
-#choose-card div svg{
+#choose-card div svg {
     padding: 10px;
     background-color: #84a59d6e;
     border-radius: 50%;
 }
 
-#choose-card div span{
+#choose-card div span {
     padding: 10px;
     background-color: #F7EDE2;
     border-radius: 30%;
-}
+} */
 
-#rightportion figure{
+#rightportion figure {
     width: 420px;
     height: 420px;
     object-fit: cover;
 }
 
-#rightportion figure img{
+#rightportion figure img {
     height: 100%;
     width: 100%;
     border-radius: 50%;
 }
 
-#logo{
+#logo {
     height: 60px;
     width: 60px;
     border-radius: 50%;
 }
-#bar{
+
+#bar {
     height: 60px;
     width: 60px;
 }
-.bottom{
-    height: 20px;
-    width: 20px;
-    display: inline-block;
-    padding-left: 200px;
+
+.bottom {
+    /* height: 20px;
+    width: 20px; */
+    /* display: inline-block; */
+    /* padding-left: 200px; */
 }
 
-@media screen and (max-width:550px) 
-{
+@media screen and (max-width:550px) {
     body {
         margin: 0;
         background-color: #F28482;
@@ -215,6 +226,7 @@ input ::placeholder{
         align-items: center;
         width: 550px;
     }
+
     nav {
         overflow: hidden;
         display: flex;
@@ -223,16 +235,16 @@ input ::placeholder{
         align-items: center;
         height: 70px;
     }
-    
-    nav ul{
+
+    nav ul {
         display: flex;
         flex-direction: row;
         gap: 10px;
         max-width: 230px;
         position: relative;
     }
-    
-    nav ul li{
+
+    nav ul li {
         list-style: none;
         font-size: 0px;
         font-weight: 4 00;
@@ -240,20 +252,21 @@ input ::placeholder{
         align-items: center;
         position: relative;
     }
+
     nav a {
         float: left;
         display: block;
         color: white;
         text-align: center;
         padding: 10px 13px;
-        text-decoration: none ;
+        text-decoration: none;
     }
-    
+
     nav a:hover {
         background-color: #ddd;
         color: black;
     }
-    
+
     .search-container {
         background-color: #F5CAC3;
         float: left;
@@ -262,7 +275,7 @@ input ::placeholder{
         height: 40px;
         width: 200px;
     }
-    
+
     input[type=text] {
         padding: 6px;
         margin-top: 8px;
@@ -273,11 +286,11 @@ input ::placeholder{
         background: transparent;
         outline: none;
     }
-    
-    input ::placeholder{
+
+    input ::placeholder {
         color: #ddd;
     }
-    
+
     .search-container button {
         float: left;
         padding: 10px 20px;
@@ -289,12 +302,12 @@ input ::placeholder{
         border: none;
         cursor: pointer;
     }
-    
+
     .account-options {
         float: right;
         align-items: center;
     }
-    
+
     .account-options a {
         padding: 14px 20px;
         background-color: #84A59D;
@@ -303,30 +316,30 @@ input ::placeholder{
         font-weight: 500;
         align-items: center;
     }
-    
-    .child{
+
+    .child {
         margin: 0 auto;
         height: 90vh;
         width: 90%;
         background-color: #F7EDE2;
         border-radius: 15px;
     }
-    
-    #hero{
+
+    #hero {
         display: flex;
         justify-content: center;
         align-items: center;
         height: calc(100% - 20vh);
     }
-    
-    #leftportion{
+
+    #leftportion {
         display: flex;
         flex-direction: column;
         gap: 20px;
         height: 80%;
     }
-    
-    #leftportion button{
+
+    #leftportion button {
         padding: 16px 20px 16px 20px;
         border: none;
         border-radius: 50%;
@@ -340,80 +353,82 @@ input ::placeholder{
         font-size: small;
         cursor: pointer;
     }
-    
-    #title{
+
+    #title {
         font-family: "Madimi One", sans-serif;
         font-size: 35px;
         font-weight: 600;
         color: #F28482;
         text-align: center;
     }
-    
-    #text{
+
+    #text {
         text-transform: uppercase;
         font-family: "Anton", sans-serif;
         font-size: 15px;
         color: #F6BD60;
         text-align: center;
     }
-    
-    #choose-card{
+
+    #choose-card {
         background-color: #84a59d6b;
         height: 50px;
         width: 150px;
         border-radius: 20px;
         padding: 20px;
     }
-    
-    #choose-card span{
+
+    #choose-card span {
         color: #84A59D;
         font-weight: 800;
         text-align: center;
     }
-    
-    #choose-card div{
+
+    #choose-card div {
         display: flex;
         flex-direction: row;
         gap: 5px;
         margin-top: 10px;
     }
-    
-    #choose-card div svg{
+
+    #choose-card div svg {
         padding: 10px;
         background-color: #84a59d6e;
         border-radius: 50%;
     }
-    
-    #choose-card div span{
+
+    #choose-card div span {
         padding: 10px;
         background-color: #F7EDE2;
         border-radius: 30%;
     }
-    
-    #rightportion figure{
+
+    #rightportion figure {
         width: 200px;
         height: 200px;
         object-fit: cover;
         float: right;
     }
-    
-    #rightportion figure img{
+
+    #rightportion figure img {
         height: 70%;
         width: 70%;
-        border-radius:100%;
+        border-radius: 100%;
     }
-    
-    #logo{
+
+    #logo {
         height: 25px;
         width: 25px;
         border-radius: 100%;
     }
-    #bar{
+
+    #bar {
         height: 25px;
         width: 25px;
         padding-left: 20px;
     }
-    .bottom{
+
+    .bottom {
         height: 20px;
         width: 20px;
         display: inline-block;
