--- a/Smart-Cart/styles.css
+++ b/Smart-Cart/styles.css
@@ -209,12 +209,12 @@ input ::placeholder {
     width: 60px;
 }
 
-.bottom {
+/* .bottom { */
     /* height: 20px;
     width: 20px; */
     /* display: inline-block; */
     /* padding-left: 200px; */
-}
+/* } */
 
 @media screen and (max-width:550px) {
     body {
