--- a/Smart-Cart/Login-Form/style.css
+++ b/Smart-Cart/Login-Form/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    min-height: 100vh;
-    width: 100%;
+    /* min-height: 100vh; */
+    /* width: 100%; */
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
