--- a/Smart-Cart/styles.css
+++ b/Smart-Cart/styles.css
@@ -21,7 +21,7 @@ html {
 }
 
 nav {
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -44,8 +44,8 @@ nav ul li {
 }
 
 nav a {
-    float: left;
-    display: block;
+    /* float: left; */
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 20px;
@@ -55,6 +55,13 @@ nav a {
 nav a:hover {
     background-color: #ddd;
     color: black;
+}
+
+nav div #bar {
+    visibility: hidden;
+
+
+
 }
 
 .search-container {
