--- a/Smart-Cart/styles.css
+++ b/Smart-Cart/styles.css
@@ -12,7 +12,7 @@ body,
 html {
     height: 100%;
     width: 100%;
-    background-color: #F28482;
+    /* background-color: #F28482; */
     /* font-family: Montserrat; */
     /* display: flex;
     justify-content: center;
@@ -200,6 +200,7 @@ input ::placeholder {
 }
 
 #rightportion figure img {
+    display: inline-block;
     height: 100%;
     width: 100%;
     border-radius: 50%;
@@ -217,10 +218,10 @@ input ::placeholder {
 }
 
 /* .bottom { */
-    /* height: 20px;
+/* height: 20px;
     width: 20px; */
-    /* display: inline-block; */
-    /* padding-left: 200px; */
+/* display: inline-block; */
+/* padding-left: 200px; */
 /* } */
 
 @media screen and (max-width:550px) {
