--- a/Smart-Cart/prod_style.css
+++ b/Smart-Cart/prod_style.css
@@ -1,15 +1,17 @@
-body{
+body {
     margin: 0;
     font-family: sans-serif;
     background: #f2f2f2;
 }
-h3{
+
+h3 {
     text-align: center;
     font-size: 30px;
     margin: 0;
     padding-top: 10px;
 }
-.gallery{
+
+.gallery {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -17,8 +19,10 @@ h3{
     align-items: center;
     margin: 50px 0;
 }
-.content{
-    width: 20%;
+
+.content {
+    width: 400px;
+    height: 450px;
     margin: 15px;
     box-sizing: border-box;
     float: left;
@@ -26,54 +30,63 @@ h3{
     border-radius: 20px;
     cursor: pointer;
     padding-top: 10px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25),
-    0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
     transition: .4s;
     background: #f2f2f2;
 }
-.content:hover{
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16),
-    0 3px 6px rgba(0,0,0,0.23);
+
+.content:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+        0 3px 6px rgba(0, 0, 0, 0.23);
     transform: translate(0px, -8px);
 }
-img{
+
+img {
     width: 200px;
     height: 200px;
     text-align: center;
     margin: 0 auto;
     display: block;
 }
-h6{
+
+h6 {
     font-size: 26px;
     text-align: center;
     color: #222f3e;
     margin: 0;
 }
-ul{
+
+ul {
     list-style: none;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 0;
 }
-li{
+
+li {
     padding-top: 5px;
 
 }
-.fa{
+
+.fa {
     font-size: 26px;
     transition: .4s;
     margin: 3px;
 }
-.checked{
+
+.checked {
     color: #ff9f43;
 
 }
-.fa:hover{
+
+.fa:hover {
     transform: scale(1.3);
     transition: .6s;
 }
-button{
+
+button {
     text-align: center;
     font-size: 24px;
     color: #fff;
@@ -86,17 +99,20 @@ button{
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
 }
-.buy{
+
+.buy {
     background: #2183a2;
 }
-@media(max-width:1000px){
-    .content{
+
+@media(max-width:1000px) {
+    .content {
         width: 45%;
 
     }
 }
-@media(max-width:750px){
-    .content{
+
+@media(max-width:750px) {
+    .content {
         width: 100%;
 
     }
