--- a/Smart-Cart/prod_style.css
+++ b/Smart-Cart/prod_style.css
@@ -18,7 +18,7 @@ h3{
     margin: 50px 0;
 }
 .content{
-    width: 20%;
+    width: 400px;
     margin: 15px;
     box-sizing: border-box;
     float: left;
