--- a/Smart-Cart/Sign-Up-From/style.css
+++ b/Smart-Cart/Sign-Up-From/style.css
@@ -20,11 +20,10 @@ section {
 }
 
 
-
 .side img {
-    width: 75%;
-    max-width: 80%;
-    height: 80%;
+    width: 55vw;
+    /* max-width: 80%; */
+    height: 60vw;
 }
 
 .login-container {
