--- a/Product cards/.vscode/about.css
+++ b/Product cards/.vscode/about.css
@@ -39,9 +39,11 @@
 }
 .about-us img{
     display: block;
-    max-width: 100%;
+    max-width: 400px;
+    max-height: 360px;
     height: auto;
     margin: 0 auto;
+    padding-top: 130px;
     float: right;
 }
 .fa-brands, .fab {
