--- a/Smart-Cart/About-Page/style.css
+++ b/Smart-Cart/About-Page/style.css
@@ -1,43 +1,51 @@
-*{
+* {
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
 }
-.about-us{
+
+.about-us {
     padding: 80px 0px;
 }
-.container{
+
+.container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
 }
-.row{
+
+.row {
     display: flex;
     flex-wrap: wrap;
 }
-.flex{
+
+.flex {
     flex: 0 0 50%;
     max-width: 100%;
     padding: 30px 20px;
 }
-.about-us h2{
+
+.about-us h2 {
     font-size: 45px;
     margin-bottom: 20px;
     color: #333;
 }
-.about-us h3{
+
+.about-us h3 {
     font-size: 22px;
     color: #888;
     margin-bottom: 8px;
 }
-.about-us p{
+
+.about-us p {
     font-size: 18px;
     line-height: 1.5;
     color: #333;
     margin-bottom: 20px;
 }
-.about-us img{
+
+.about-us img {
     display: block;
     max-width: 400px;
     max-height: 360px;
@@ -46,14 +54,18 @@
     padding-top: 130px;
     float: right;
 }
-.fa-brands, .fab {
+
+.fa-brands,
+.fab {
     font-family: "Font Awesome 6 Brands";
     margin: 10px;
 }
-.social-links{
+
+.social-links {
     margin-bottom: 18px;
 }
-.social-links a{
+
+.social-links a {
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -63,13 +75,15 @@
     margin-right: 10px;
     color: #fff;
     background-color: #333;
-    box-shadow: 0 3px 5px rgba(0,0,0,0.30);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.30);
     transition: all .4s ease;
 }
-.social-links a:hover{
+
+.social-links a:hover {
     transform: translateY(-3px);
 }
-.btn{
+
+.btn {
     text-decoration: none;
     color: #fff;
     display: inline-block;
@@ -81,32 +95,80 @@
     background-color: #333;
     transition: all .4s ease;
 }
-.btn:hover{
+
+.btn:hover {
     transform: translateY(-3px);
 }
+
 @media screen and(max-width:760px) {
-    .row{
+    .row {
         flex-direction: column;
     }
-    .flex{
+
+    .flex {
         max-width: 100%;
     }
-    .about-us h2{
+
+    .about-us h2 {
         font-size: 30px;
     }
-    .about-us p{
+
+    .about-us p {
         font-size: 15px;
     }
-    .social-links a{
+
+    .social-links a {
         width: 30px;
         height: 30px;
         line-height: 30px;
         font-size: 14px;
         margin-right: 5px;
     }
-    .btn{
+
+    .btn {
         font-size: 15px;
         padding: 8px 16px;
         margin-bottom: 30px;
     }
+}
+
+.login-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-control {
+    width: 100%;
+    position: relative;
+    margin-bottom: 24px;
+}
+
+input,
+button {
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    font-size: 1.1em;
+}
+
+input {
+    width: 100%;
+    background: #e6e6e6;
+    color: #333;
+    letter-spacing: 0.5px;
+    padding: 14px 64px;
+}
+
+input~i {
+    position: absolute;
+    left: 32px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #888;
+    transition: color 0.4s;
+}
+
+input:focus~i {
+    color: #843bc7;
 }
